# blosc2_plugin_example

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: cibuildwheels.yml
blosc2_plugin_example/: __init__.py
examples/: CMakeLists.txt  array_roundtrip.py  schunk_roundtrip.py  test_plugin.c
src/: CMakeLists.txt  test_plugin.c  urfilters.c  urfilters.h
